chore(servicenow): remove commented-out local test main() from CredentialResolver